<resources>
    <string name="app_name">20200430-BrianFerguson-NYCSchools</string>
    <string name="error_text">ERROR: UNABLE TO FETCH DATA</string>
    <string name="math">MATH AVG: </string>
    <string name="reading">READING AVG:</string>
    <string name="writing">WRITING AVG:</string>
    <string name="sat_scores">SAT SCORES</string>
    <string name="number_of_takers">NUMBER OF TAKERS:</string>
</resources>
